--- a/tarifs.html
+++ b/tarifs.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
+	 <meta name="apple-mobile-web-app-capable" content="yes" />
+         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
 	<meta name="description" content="">
