--- a/src/html/pages/tarifs.html
+++ b/src/html/pages/tarifs.html
@@ -187,55 +187,48 @@
 		window.Telegram.WebApp.ready();
 		window.Telegram.WebApp.expand();
 
-
-		function getKeyboardHeight() {
-			if (window.Telegram.WebApp.isExpanded) {
-				return window.visualViewport ? window.visualViewport.height : window.innerHeight;
-			}
-			return 0;
-		}
-
-		function adjustFormMargin(input) {
-			setTimeout(() => {
-				const keyboardHeight = window.Telegram.WebApp.keyboardHeight || 0;
-
-				if (keyboardHeight > 0) {
-					form.style.marginBottom = keyboardHeight + "px";
-					scrollToInput(input)
-
-				} else {
-					form.style.marginBottom = "";
-				}
-			}, 200);
-		}
-
-		function scrollToInput(input) {
-
-			const inputRect = input.getBoundingClientRect();
-			const windowHeight = getKeyboardHeight();
-			const keyboardHeight = window.Telegram.WebApp.keyboardHeight || 0;
-			const inputBottom = inputRect.bottom;
-			const targetInputBottom = windowHeight - keyboardHeight - 10;
-
-			if (inputBottom > targetInputBottom) {
-				const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-				const scrollOffset = inputRect.bottom - targetInputBottom + scrollTop;
-
-				window.scrollTo({
-					top: scrollOffset,
-					behavior: 'smooth'
-
-				});
-
-			}
-
-		}
-
 		const form = document.getElementById('calculation');
 		const inputs = document.querySelectorAll('#calculation input');
+
+		if (!form || inputs.length === 0) {
+			return;
+		}
+
+		function smoothScrollTo(element, offset = 0) {
+			const elementTop = element.getBoundingClientRect().top + window.pageYOffset - offset;
+			window.scrollTo({
+				top: elementTop,
+				behavior: 'smooth'
+			});
+		}
+
+		function adjustForm(input) {
+			let keyboardHeight = window.Telegram.WebApp.keyboardHeight || 0;
+
+			if (!keyboardHeight) {
+				const viewportHeight = window.visualViewport ? window.visualViewport.height : window.innerHeight;
+				keyboardHeight = window.innerHeight - viewportHeight;
+			}
+
+			if (keyboardHeight > 0) {
+				form.style.marginBottom = keyboardHeight + "px";
+				smoothScrollTo(input, 10);
+			} else {
+				form.style.marginBottom = "";
+			}
+		}
+
+
 		inputs.forEach(input => {
-			input.addEventListener('focus', () => adjustFormMargin(input));
-			input.addEventListener('blur', () => adjustFormMargin(input));
+			input.addEventListener('focus', () => adjustForm(input));
+		});
+
+
+		form.addEventListener('focusout', (event) => {
+
+			if (!form.contains(event.relatedTarget)) {
+				form.style.marginBottom = "";
+			}
 		});
 
 
