fix: fix accordeon

--- a/src/html/pages/servises.html
+++ b/src/html/pages/servises.html
@@ -189,6 +189,68 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="servises" data-accordion>
+			<div class="servises-accordeon" data-accordion-header>
+				<h3>Наши услуги из США</h3>
+				<svg width="17" height="9">
+					<use xlink:href="#accordeon"></use>
+				</svg>
+			</div>
+
+			<div class="servises-wrapper" data-accordion-content>
+				<div class="servises-card-info">
+					<p>Консолидация онлайн заказов</p>
+					<b>БЕСПЛАТНО</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Фото отчет о поступлении посылки на склад в США</p>
+					<b>$5 за коробку/посылку</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Фото отчёт вне упаковки</p>
+					<b>$1 за 1 tracking number</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Проверка рабочего состояния изделия</p>
+					<b>$5 за коробку/посылку</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Проверка рабочего состояния изделия</p>
+					<b>$5</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Удалить коробки (например, коробки для обуви)</p>
+					<b>$1 за каждую коробку</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Проверка рабочего состояния изделия</p>
+					<b>$5 за коробку/посылку</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Возврат в магазин со склада в безналоговом штате Delaware через (Fedex, UPS, DHL, USPS и другие)
+					</p>
+					<b>$10 за упаковку + label</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Хранение посылок свыше 14 дней</p>
+					<b>$1 в день за 1 коробку/tracking number</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Покупки в оффлайн магазине</p>
+					<b>$50 за выезд + 10% от стоимости заказа</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Он-лайн покупки</p>
+					<b>10% от стоимости заказа</b>
+				</div>
+				<div class="servises-card-info">
+					<p>Забрать из магазина/локера/склада (storage)</p>
+					<b>$15 каждый адрес в радиусе 10 миль (16 км) от локации склада 181 Edgermoor rd 19809 Wilmington
+						DE</b>
+				</div>
+			</div>
+		</section>
 	</div>
 
 	<script>
